--- a/NeopilotVS/Windows/RefactorCodeDialogWindow.xaml
+++ b/NeopilotVS/Windows/RefactorCodeDialogWindow.xaml
@@ -1,15 +1,13 @@
-﻿<platform:DialogWindow  x:Class="NeopilotVS.RefactorCodeDialogWindow" x:Name="RefactorCodeDialogWindow_"
+﻿<toolkit:DialogWindow x:Class="NeopilotVS.RefactorCodeDialogWindow" x:Name="RefactorCodeDialogWindow_"
                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                        xmlns:vsshell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
-                        xmlns:platform="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
+                        xmlns:vsshell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.17.0"
+                        xmlns:platform="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.17.0"
                         xmlns:toolkit="clr-namespace:Community.VisualStudio.Toolkit;assembly=Community.VisualStudio.Toolkit"
                         xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
                         xmlns:imagecatalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
-
-                        toolkit:Themes.UseVsTheme="True"
 
                         WindowStyle="None"
                         ResizeMode="NoResize"
@@ -27,9 +25,8 @@
                         Background="Transparent"
                         >
 
-    <platform:DialogWindow.Resources>
+    <toolkit:DialogWindow.Resources>
         <ResourceDictionary>
-            <platform:BrushToColorConverter x:Key="BrushToColorConverter"/>
             
             <Style x:Key="ModernButtonStyle" TargetType="Button">
                 <Setter Property="Background" Value="Transparent"/>
@@ -46,10 +43,10 @@
                             </Border>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter TargetName="bg" Property="Background" Value="{DynamicResource {x:Static platform:CommonControlsColors.ButtonHoverBrushKey}}"/>
+                                    <Setter TargetName="bg" Property="Background" Value="{DynamicResource {x:Static platform:EnvironmentColors.ButtonHoverBrushKey}}"/>
                                 </Trigger>
                                 <Trigger Property="IsPressed" Value="True">
-                                    <Setter TargetName="bg" Property="Background" Value="{DynamicResource {x:Static platform:CommonControlsColors.ButtonPressedBrushKey}}"/>
+                                    <Setter TargetName="bg" Property="Background" Value="{DynamicResource {x:Static platform:EnvironmentColors.ButtonPressedBrushKey}}"/>
                                 </Trigger>
                             </ControlTemplate.Triggers>
                         </ControlTemplate>
@@ -58,18 +55,18 @@
             </Style>
 
             <Style x:Key="ActionButtonStyle" TargetType="Button">
-                <Setter Property="Background" Value="{DynamicResource {x:Static platform:CommonControlsColors.ButtonDefaultBrushKey}}"/>
-                <Setter Property="Foreground" Value="{DynamicResource {x:Static platform:CommonControlsColors.ButtonDefaultTextBrushKey}}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static platform:EnvironmentColors.ButtonDefaultBrushKey}}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static platform:EnvironmentColors.ButtonDefaultTextBrushKey}}"/>
                 <Setter Property="Padding" Value="10,5"/>
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="Button">
-                            <Border x:Name="bg" Background="{TemplateBinding Background}" CornerRadius="4" BorderThickness="1" BorderBrush="{DynamicResource {x:Static platform:CommonControlsColors.ButtonBorderBrushKey}}">
+                            <Border x:Name="bg" Background="{TemplateBinding Background}" CornerRadius="4" BorderThickness="1" BorderBrush="{DynamicResource {x:Static platform:EnvironmentColors.ButtonBorderBrushKey}}">
                                 <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </Border>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter TargetName="bg" Property="Background" Value="{DynamicResource {x:Static platform:CommonControlsColors.ButtonHoverBrushKey}}"/>
+                                    <Setter TargetName="bg" Property="Background" Value="{DynamicResource {x:Static platform:EnvironmentColors.ButtonHoverBrushKey}}"/>
                                 </Trigger>
                             </ControlTemplate.Triggers>
                         </ControlTemplate>
@@ -79,7 +76,7 @@
         </ResourceDictionary>
     </platform:DialogWindow.Resources>
 
-    <Border CornerRadius="8" BorderThickness="1" Background="{DynamicResource {x:Static platform:CommonControlsColors.ComboBoxListBackgroundBrushKey}}" BorderBrush="{DynamicResource {x:Static platform:CommonControlsColors.ComboBoxBorderBrushKey}}">
+    <Border CornerRadius="8" BorderThickness="1" Background="{DynamicResource {x:Static platform:EnvironmentColors.ComboBoxListBackgroundBrushKey}}" BorderBrush="{DynamicResource {x:Static platform:EnvironmentColors.ComboBoxBorderBrushKey}}">
         <Grid Margin="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -100,7 +97,7 @@
 
             <!-- Input Area -->
             <Grid Grid.Row="1" Margin="15,5">
-                <Border CornerRadius="6" BorderThickness="1" BorderBrush="{DynamicResource {x:Static platform:CommonControlsColors.TextBoxBorderBrushKey}}" Background="{DynamicResource {x:Static platform:CommonControlsColors.TextBoxBackgroundBrushKey}}">
+                <Border CornerRadius="6" BorderThickness="1" BorderBrush="{DynamicResource {x:Static platform:EnvironmentColors.TextBoxBorderBrushKey}}" Background="{DynamicResource {x:Static platform:EnvironmentColors.TextBoxBackgroundBrushKey}}">
                     <Grid>
                         <TextBox x:Name="InputPrompt" 
                                  Background="Transparent" 
@@ -114,10 +111,7 @@
                         
                         <TextBlock x:Name="InputPromptHint" 
                                    IsHitTestVisible="False" 
-                                   Text="Describe your refactor or select a preset..." 
-                                   Margin="13,0,0,0" 
-                                   VerticalAlignment="Center" 
-                                   Foreground="{DynamicResource {x:Static platform:CommonControlsColors.TextBoxTextDisabledBrushKey}}" 
+                                   Text="Describe your refactor or select a preset..." Margin="13,0,0,0" VerticalAlignment="Center" Foreground="{DynamicResource {x:Static platform:EnvironmentColors.TextBoxTextDisabledBrushKey}}" 
                                    FontSize="13" 
                                    FontStyle="Italic"/>
 
@@ -131,7 +125,7 @@
             <!-- Presets Area -->
             <ScrollViewer Grid.Row="2" Margin="10,10,10,15" VerticalScrollBarVisibility="Auto">
                 <StackPanel x:Name="PresetsPanel" Margin="5">
-                    <TextBlock Text="PRESETS" FontSize="10" FontWeight="Bold" Margin="6,0,0,8" Foreground="{DynamicResource {x:Static platform:CommonControlsColors.TextBoxTextDisabledBrushKey}}" Opacity="0.7"/>
+                    <TextBlock Text="PRESETS" FontSize="10" FontWeight="Bold" Margin="6,0,0,8" Foreground="{DynamicResource {x:Static platform:EnvironmentColors.TextBoxTextDisabledBrushKey}}" Opacity="0.7"/>
                     <!-- Presets will be injected here -->
                 </StackPanel>
             </ScrollViewer>
